--- a/css/main.css
+++ b/css/main.css
@@ -244,3 +244,74 @@ ul.workplace li {
   font-style: italic;
   font-weight: 500;
 }
+
+@media only screen and (max-height: 768px) {
+  h1 {
+    font-size: 2em;
+  }
+  .email {
+    margin: 0;
+    font-size: 1em;
+  }
+  .titles {
+    font-size: 1.5em;
+  }
+  nav ul li a {
+    padding: 1em 2em;
+    font-size: 0.9em;
+    color: rgba(255,255,255,0.7);
+  }
+  .web {
+    width: 5em;
+  }
+  section {
+    background-color: #424242;
+    margin: 0;
+    padding: 3em 2em 3em 2em;
+  }
+  .animated-cube {
+    margin: 10em;
+  }
+  .cube {
+    width: 76px;
+    height: 76px;
+    margin-left: -38px;
+    margin-top: -38px;
+  }
+  .cube div {
+    width: 76px;
+    height: 76px;
+    text-align: center;
+    position: absolute;
+  }
+  .cube div.top {
+  margin-top: -38px;
+  }
+
+  .cube div.right {
+    margin-left: 38px;
+  }
+
+  .cube div.bottom {
+  margin-top: 38px;
+  }
+
+  .cube div.left {
+  margin-left: -38px;
+  }
+
+  .cube div.front {
+  transform: translateZ(38px);
+  }
+
+  .cube div.back {
+  transform: translateZ(-38px) rotateX(180deg);
+  }
+
+  p {
+    font-size: 1em;
+  }
+  ul.work li{
+    font-size: 0.9em;
+  }
+}
