--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ nav ul li {
 }
 
 nav ul li a {
-  color: black;
   text-align: right;
   width: 100%;
   padding: 1em 2em;
@@ -245,7 +244,7 @@ ul.workplace li {
   font-weight: 500;
 }
 
-@media only screen and (max-height: 768px) {
+@media only screen and (max-height: 720px) {
   h1 {
     font-size: 2em;
   }
@@ -316,5 +315,67 @@ ul.workplace li {
   }
   ul.work li{
     font-size: 0.9em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  .hide-mobile {
+    display: none;
+  }
+
+  .show-mobile {
+    display: block;
+  }
+
+  .menu {
+    fill: rgba(255, 255, 255, 0.8);
+    top: 2em;
+    right: 2em;
+    position: fixed;
+    width: 25px;
+    margin-top: 0;
+    float: right;
+    margin-right: 0;
+  }
+
+  nav {
+    position: fixed;
+    width: 60%;
+    height: 100%;
+    z-index: 8;
+    padding-top: 2em;
+    padding: 0;
+    background: #212121;
+  }
+
+  .exit-btn {
+    margin: 0;
+    text-align: right;
+    width: 100%;
+  }
+
+  .exit-btn img{
+      width: 15px;
+      cursor: pointer;
+      margin: 2em 2em;
+  }
+
+  nav ul {
+    float: left;
+  }
+
+  nav ul li a {
+    color: rgba(255,255,255,0.7);
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    padding: 1em 4em;
+    background: #212121;
+    text-align: left;
+  }
+
+  nav ul li a:hover {
+    background: #616161;
   }
 }
