--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ ul.workplace li {
   font-weight: 500;
 }
 
-@media only screen and (max-height: 720px) {
+@media only screen and (max-height: 720px), only screen and (max-width: 1366px) {
   h1 {
     font-size: 2em;
   }
@@ -378,4 +378,11 @@ ul.workplace li {
   nav ul li a:hover {
     background: #616161;
   }
+  .grey-container {
+    margin: 5% 5%;
+    padding: 2em;
+    border-radius: 20px;
+    background-color: #424242;
+  }
+  
 }
