--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: 'Roboto',sans-serif;
   background-color:#303030;
+  height: 100%;
 }
 
 * {-webkit-font-smoothing: antialiased;}
@@ -32,12 +33,14 @@ p {
 nav {
   justify-content: space-between;
   right: 0px;
-  padding: 2em 6em;
+  padding-top: 2em;
+  padding-right: 6em;
   background-color: #303030;
   top: 0;
   overflow: hidden;
   position: fixed;
   width: 100%;
+  height: 3em;
 }
 
 ul {
@@ -63,7 +66,7 @@ nav ul li {
 nav ul li a {
   text-align: right;
   width: 100%;
-  padding: 1em 2em;
+  padding: 0 2em;
   text-decoration: none;
   font-size: 1.1em;
   color: rgba(255,255,255,0.7);
@@ -99,71 +102,35 @@ section {
   display: none;
 }
 
-
-.animated-cube {
-    margin: 15em;
+.scroll-prompt {
+  margin: 15em;
+  text-align: center;
+  animation: move 3s infinite ease;
 }
 
-.cube {
-  transform-style: preserve-3d;
-  animation: spin 5s infinite ease;
-  position: relative;
+.scroll {
   width: 100px;
   height: 100px;
-  top: 50%;
-  left: 50%;
-  margin-left: -50px;
-  margin-top: -50px;
 }
 
-.cube div {
-   width: 100px;
-   height: 100px;
-   text-align: center;
-   position: absolute;
-}
+@keyframes move {
+  0%, 10%{
+    transform: translateY(0em);
+    opacity: 0;
+  }
+  30% {
+    transform: translateY(0em);
+    opacity: 1;
+  }
+  70% {
+    transform: translateY(3em);
+    opacity: 1;
+  }
 
-.cube div.top {
-   transform: rotateX(90deg);
-  background: rgba(255,255,255,0.7);
-  margin-top: -50px;
-}
-
-.cube div.right {
-   transform: rotateY(90deg); 
-  background: rgba(255, 255, 255, 0.4);
-  margin-left: 50px;
-}
-
-.cube div.bottom {
-   transform: rotateX(-90deg); 
-  background: rgba(255, 255, 255, 0.7);
-  margin-top: 50px;
-}
-
-.cube div.left {
-   transform: rotateY(-90deg); 
-  background: rgba(255, 255, 255, 0.4);
-  margin-left: -50px;
-}
-
-.cube div.front {
-  transform: translateZ(50px);
-  background: rgba(255,255,255, 0.3);
-}
-
-.cube div.back {
-  transform: translateZ(-50px) rotateX(180deg);
-  background: rgba(255, 255, 255, 0.3);
-}
-
-@keyframes spin {
-  0% {transform: rotateX(-30deg) rotateY(45deg);}
-  10% {transform: rotateX(-30deg) rotateY(45deg);}
-  
-  55% {transform: rotateX(-30deg) rotateY(225deg);}
-
-  100% {transform: rotateX(-390deg) rotateY(225deg);}
+  90%,100% {
+    transform: translateY(3em);
+    opacity: 0;
+  }
 }
 
 .grey-container {
@@ -244,6 +211,8 @@ ul.workplace li {
   font-weight: 500;
 }
 
+
+
 @media only screen and (max-height: 720px), only screen and (max-width: 1366px) {
   h1 {
     font-size: 2em;
@@ -256,7 +225,8 @@ ul.workplace li {
     font-size: 1.5em;
   }
   nav {
-    padding: 1.5em 4em;
+    padding-top: 1.5em;
+    padding-right: 4em;
   }
   nav ul li a {
     padding: 1em 2em;
@@ -271,43 +241,14 @@ ul.workplace li {
     margin: 0;
     padding: 3em 2em 2em 2em;
   }
-  .animated-cube {
-    margin: 8em;
-  }
-  .cube {
-    width: 76px;
-    height: 76px;
-    margin-left: -38px;
-    margin-top: -38px;
-  }
-  .cube div {
-    width: 76px;
-    height: 76px;
-    text-align: center;
-    position: absolute;
-  }
-  .cube div.top {
-  margin-top: -38px;
+
+  .scroll-prompt {
+    margin: 9em 0;
   }
 
-  .cube div.right {
-    margin-left: 38px;
-  }
-
-  .cube div.bottom {
-  margin-top: 38px;
-  }
-
-  .cube div.left {
-  margin-left: -38px;
-  }
-
-  .cube div.front {
-  transform: translateZ(38px);
-  }
-
-  .cube div.back {
-  transform: translateZ(-38px) rotateX(180deg);
+  .scroll {
+    width: 75px;
+    height: 75px;
   }
 
   p {
@@ -315,6 +256,27 @@ ul.workplace li {
   }
   ul.work li{
     font-size: 0.9em;
+  }
+}
+
+@media only screen and (max-height: 1000px) {
+  .scroll-prompt {
+    margin-top: 15em;
+    margin-bottom: 10em;
+  }
+}
+
+
+@media only screen and (max-height: 700px) {
+  .scroll-prompt {
+    margin: 10em 0;
+  }
+}
+
+
+@media only screen and (max-height: 600px) {
+  .scroll-prompt {
+    margin: 7em 0;
   }
 }
 
