--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,9 @@ nav {
   position: fixed;
   width: 100%;
   height: 3em;
+  box-sizing: content-box;
+  z-index: 100;
+
 }
 
 ul {
@@ -71,7 +74,7 @@ nav ul li a {
   text-align: right;
   width: 100%;
   padding: 0 2em;
-  text-decoration: none;
+  text-decoration: none !important;
   font-size: 1.1em;
   color: rgba(255,255,255,0.7);
 }
@@ -99,6 +102,7 @@ h1 {
 }
 
 section {
+  text-align: center;
   background-color: #424242;
   margin: 0;
   padding: 3em 2em 5em 2em;
@@ -247,11 +251,6 @@ ul.workplace li {
   .web {
     width: 5em;
   }
-  section {
-    background-color: #424242;
-    margin: 0;
-    padding: 3em 2em 2em 2em;
-  }
 
   .scroll-prompt {
     margin: 9em 0;
@@ -316,7 +315,7 @@ ul.workplace li {
     position: fixed;
     width: 60%;
     height: 100%;
-    z-index: 8;
+    z-index: 100;
     padding-top: 2em;
     padding: 0;
     background: #212121;
