title bar margin

--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,7 @@ section {
   text-align: center;
   background-color: #424242;
   margin: 0;
+  margin-top: 5em;
   padding: 3em 2em 5em 2em;
 }
 
