--- a/css/main.css
+++ b/css/main.css
@@ -37,14 +37,13 @@ p {
 nav {
   justify-content: space-between;
   right: 0px;
-  padding-top: 2em;
   padding-right: 6em;
   background-color: #303030;
   top: 0;
   overflow: hidden;
   position: fixed;
   width: 100%;
-  height: 3em;
+  height: 5em;
   box-sizing: content-box;
   z-index: 100;
 
@@ -68,12 +67,14 @@ nav ul {
 
 nav ul li {
   float: left;
+  margin:0;
+  padding: 1.5em;
 }
 
 nav ul li a {
   text-align: right;
   width: 100%;
-  padding: 1em 2em;
+  padding-bottom:1em;
   text-decoration: none !important;
   font-size: 1.1em;
   color: rgba(255,255,255,0.7);
@@ -123,14 +124,14 @@ section {
   left: 50%;
   bottom: 0px;
   margin-bottom: 3em;
-  margin-left: -50px; /* adjust offset to center the scroll prompt */
+  margin-left: -37px; /* adjust offset to center the scroll prompt */
   text-align: center;
   animation: move 3s infinite ease;
 }
 
 .scroll {
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
 }
 
 @keyframes move {
@@ -154,7 +155,7 @@ section {
 }
 
 .grey-container {
-  margin: 15% 15% 5% 15%;
+  margin: 20% 15% 5% 15%;
   padding: 2em;
   border-radius: 30px;
   background-color: #424242;
@@ -243,11 +244,10 @@ ul.workplace li {
     font-size: 1.5em;
   }
   nav {
-    padding-top: 1.5em;
     padding-right: 4em;
   }
   nav ul li a {
-    padding: 1em 2em;
+    padding: 1.5em 2em;
     font-size: 0.9em;
     color: rgba(255,255,255,0.7);
   }
@@ -256,12 +256,12 @@ ul.workplace li {
   }
 
   .scroll {
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
   }
 
   .scroll-prompt {
-    margin-left: -37px; /* adjust offset to center the scroll prompt */
+    margin-left: -30px; /* adjust offset to center the scroll prompt */
   }
 
   p {
@@ -280,41 +280,6 @@ ul.workplace li {
   }
   h1 {
     font-size: 2em;
-  }
-  .email {
-    margin: 0;
-    font-size: 1em;
-  }
-  .titles {
-    font-size: 1.5em;
-  }
-  nav {
-    padding-top: 1.5em;
-    padding-right: 4em;
-  }
-  nav ul li a {
-    padding: 1em 2em;
-    font-size: 0.9em;
-    color: rgba(255,255,255,0.7);
-  }
-  .web {
-    width: 5em;
-  }
-
-  .scroll {
-    width: 75px;
-    height: 75px;
-  }
-
-  .scroll-prompt {
-    margin-left: -37px; /* adjust offset to center the scroll prompt */
-  }
-
-  p {
-    font-size: 1em;
-  }
-  ul.work li{
-    font-size: 0.9em;
   }
 }
 
@@ -374,14 +339,17 @@ ul.workplace li {
     float: left;
   }
 
+
   nav ul li {
     width: 100%;
+    padding:0;
   }
 
   nav ul li a {
     color: rgba(255,255,255,0.7);
     text-decoration: none;
     display: block;
+    margin:10px;
     background: #212121;
     text-align: left;
     font-size: 1.2em;
