--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,23 @@ section {
   }
 }
 
+.already-visible {
+  animation: none;
+}
+
+.slide-in {
+  animation: slide-in 0.5s ease;
+}
+
+@keyframes slide-in {
+  0% {
+      transform: translateX(10%);
+  }
+  100% {
+      transform: translateX(0%);
+  }
+}
+
 .grey-container {
   margin: 20% 15% 5% 15%;
   padding: 2em;
@@ -290,6 +307,10 @@ ul.workplace li {
 }
 
 @media only screen and (max-width: 600px) {
+  .slide-in {
+    animation: none;
+  }
+
   .carousel-item img {
     height: 300px;
   }
