info & css update

--- a/css/main.css
+++ b/css/main.css
@@ -192,11 +192,12 @@ h2 {
 h3 {
   color: #FFFFFF;
   font-weight: 500;
+  margin-top: 2em;
 }
 
 .job-title {
   font-style: italic;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 ul.work{
@@ -207,12 +208,13 @@ ul.work{
 ul.work li{
   font-size: 1em;
   color: rgba(255, 255, 255, 0.7);
-  line-height: 1.7em;
-  margin-top: -1.5em;
+  line-height: 1.5em;
+  margin-top: 0;
 }
 
 ul.workplace li {
-  margin-bottom: 2.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 .footer-container {
